# cpp-notes

./: .gitignore  CMakeLists.txt
cherno/: CMakeLists.txt
cherno/01-how-cpp-works/: log.cpp
cherno/02-how-compiler-works/: CMakeLists.txt  main.cpp  math.cpp
cherno/03-how-linker-works/: CMakeLists.txt  Log.cpp  Log.h  math.cpp
cherno/04-variables/: variables.cpp
cherno/05-loops/: CMakeLists.txt  loops.cpp
cherno/06-pointers/: CMakeLists.txt  pointers.cpp
cherno/07-references/: CMakeLists.txt  references.cpp
cherno/08-classes/: CMakeLists.txt  classes.cpp
cherno/09-how-to-write-a-class/: CMakeLists.txt  main.cpp
cherno/10-static/: CMakeLists.txt  main.cpp  static.cpp
cherno/11-constructors/: CMakeLists.txt  constructors.cpp
cherno/12-inheritance/: CMakeLists.txt  inheritance.cpp
cherno/13-virtual-functions/: CMakeLists.txt  virtual_functions.cpp
cherno/how-cpp-works/: CMakeLists.txt  main.cpp
pointers/: null-pointers.cpp  pointers.cpp  pointers.md
protobuf/: CMakeLists.txt  addressbook.proto  write-to-addressbook.cpp
variables/: CMakeLists.txt  variables.cpp  variables.md
