add_subdirectory(01-how-cpp-works)
add_subdirectory(02-how-compiler-works)
add_subdirectory(03-how-linker-works)
add_subdirectory(04-variables)
add_subdirectory(05-loops)
add_subdirectory(06-pointers)
add_subdirectory(07-references)
add_subdirectory(08-classes)
add_subdirectory(09-how-to-write-a-class)
add_subdirectory(10-static)
add_subdirectory(11-constructors)
add_subdirectory(12-inheritance)
add_subdirectory(13-virtual-functions)